--- a/docker-build.yml
+++ b/docker-build.yml
@@ -17,7 +17,7 @@ build:
 
   script:
     # Setup buildx
-    - wget -O /usr/local/bin/buildx https://github.com/docker/buildx/releases/download/v${BUILDX_VERSION}/buildx-${BUILDX_VERSION}.linux-amd64
+    - wget -O /usr/local/bin/buildx https://github.com/docker/buildx/releases/download/v${BUILDX_VERSION}/buildx-v${BUILDX_VERSION}.linux-amd64
     - sudo chmod a+x /usr/local/bin/buildx
     - docker run --rm --privileged hypriot/qemu-register
     - buildx create --use
