--- a/docker-build.yml
+++ b/docker-build.yml
@@ -14,6 +14,7 @@ build:
     # To make it possible to pass args from a downstream include
     DOCKER_BUILD_ARGS: ""
     DOCKER_BUILD_PLATFORMS: linux/arm64/v8,linux/amd64,linux/arm/v6,linux/arm/v7,linux/386
+    DOCKER_IMAGE_TAG: ${CI_COMMIT_REF_SLUG}
 
   script:
     # Setup buildx
@@ -25,6 +26,6 @@ build:
     # Build and push container
     - buildx build
       --platform ${DOCKER_BUILD_PLATFORMS}
-      --tag ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${CI_COMMIT_SHA}
+      --tag ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
       --push
       .
