Revert "feat: allow setting build vars"
This reverts commit 00e70b2fa27692c59455f0b34135395ef0df66e0.

--- a/docker-build.yml
+++ b/docker-build.yml
@@ -14,7 +14,6 @@ build:
     # To make it possible to pass args from a downstream include
     DOCKER_BUILD_ARGS: ""
     DOCKER_BUILD_PLATFORMS: linux/arm64/v8,linux/amd64,linux/arm/v6,linux/arm/v7,linux/386
-    DOCKER_IMAGE_TAG: ${CI_COMMIT_REF_SLUG}
 
   script:
     # Setup buildx
@@ -26,6 +25,6 @@ build:
     # Build and push container
     - buildx build
       --platform ${DOCKER_BUILD_PLATFORMS}
-      --tag ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
+      --tag ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${CI_COMMIT_SHA}
       --push
       .
