--- a/sast-cis-benchmark.yml
+++ b/sast-cis-benchmark.yml
@@ -1,6 +1,6 @@
 # Run CIS benchmarks against the images/containers
 sast_cis_benchmark:
-  stage: post-build
+  stage: test
   tags:
     - docker
   # Skip if fails, for now
