feat: switch to buildx image
Signed-off-by: wilmardo <info@wilmardenouden.nl>

--- a/docker-build.yml
+++ b/docker-build.yml
@@ -2,13 +2,8 @@
 .build:
   tags:
     - docker
+  image: lansible/docker-dind-buildx
   variables:
-    BUILDX_VERSION: 0.3.1
-
-    # Set variables to enable buildx plugin
-    DOCKER_CLI_EXPERIMENTAL: enabled
-    DOCKER_BUILDKIT: 1
-
     # To make it possible to pass args from a downstream include
     DOCKER_BUILD_ARGS: ""
     DOCKER_BUILD_PLATFORMS: linux/arm64/v8,linux/amd64,linux/arm/v6,linux/arm/v7,linux/386
@@ -18,20 +13,17 @@
     DOCKER_IMAGE_TAG: ${CI_COMMIT_SHA}
 
   script:
-    # Setup buildx
-    - docker build --platform=local -o . git://github.com/docker/buildx
-    - mv buildx ~/.docker/cli-plugins/docker-buildx
     - docker run --rm --privileged hypriot/qemu-register
-    - docker buildx create --use
+    - buildx create --use
 
     # Build and push container
     - if [ -z "$DOCKER_BUILD_ARGS" ]; then
-        docker buildx build
+        buildx build
         --platform ${DOCKER_BUILD_PLATFORMS}
         --tag ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
         --push .;
       else
-        docker buildx build
+        buildx build
         --platform ${DOCKER_BUILD_PLATFORMS}
         --build-args "${DOCKER_BUILD_ARGS}"
         --tag ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
