fix: add extra tag to build for local runner
Signed-off-by: wilmardo <info@wilmardenouden.nl>

--- a/docker-build.yml
+++ b/docker-build.yml
@@ -2,6 +2,7 @@
 .build:
   tags:
     - docker
+    - local
   image: lansible/docker-dind-buildx
   variables:
     # To make it possible to pass args from a downstream include
