fix: specify image for sast stage
Signed-off-by: wilmardo <info@wilmardenouden.nl>

--- a/sast-cis-benchmark.yml
+++ b/sast-cis-benchmark.yml
@@ -1,5 +1,6 @@
 # Run CIS benchmarks against the images/containers
 sast_cis_benchmark:
+  image: docker:19.03-dind
   stage: test
   tags:
     - docker
