--- a/docker-build.yml
+++ b/docker-build.yml
@@ -81,17 +81,17 @@ publish_branch_armv7:
   variables:
     DOCKER_IMAGE_TAG: ${CI_COMMIT_TAG}
 
-publish_branch_amd64:
+publish_tag_amd64:
   extends: .publish_tag
   variables:
     DOCKER_BUILD_PLATFORMS: linux/amd64
 
-publish_branch_arm64v8:
+publish_tag_arm64v8:
   extends: .publish_tag
   variables:
     DOCKER_BUILD_PLATFORMS: linux/arm64/v8
 
-publish_branch_armv7:
+publish_tag_armv7:
   extends: .publish_tag
   variables:
     DOCKER_BUILD_PLATFORMS: linux/arm/v7
@@ -108,17 +108,17 @@ publish_branch_armv7:
   variables:
     DOCKER_IMAGE_TAG: latest
 
-publish_branch_amd64:
+publish_latest_amd64:
   extends: .publish_latest
   variables:
     DOCKER_BUILD_PLATFORMS: linux/amd64
 
-publish_branch_arm64v8:
+publish_latest_arm64v8:
   extends: .publish_latest
   variables:
     DOCKER_BUILD_PLATFORMS: linux/arm64/v8
 
-publish_branch_armv7:
+publish_latest_armv7:
   extends: .publish_latest
   variables:
     DOCKER_BUILD_PLATFORMS: linux/arm/v7
