--- a/docker-build.yml
+++ b/docker-build.yml
@@ -63,20 +63,20 @@ build:
     DOCKER_IMAGE_TAG: ${CI_COMMIT_SHA}
 
 
-# Publish branch image
-.publish_branch:
+# Push branch image
+.push_branch:
   extends: .build
-  stage: publish
+  stage: push
   only:
     - branches
 
-publish_branch_amd64:
-  extends: .publish_branch
+push_branch_amd64:
+  extends: .push_branch
   variables:
     DOCKER_IMAGE_TAG: ${CI_COMMIT_REF_SLUG}-amd64
 
-publish_branch_arm64v8:
-  extends: .publish_branch
+push_branch_arm64v8:
+  extends: .push_branch
   tags:
     - docker
     - arm64v8
@@ -85,7 +85,7 @@ publish_branch_arm64v8:
 
 
 # Setup manifests
-publish_branch_manifest:
+manifest_branch:
   extends: .manifest
   stage: manifest
   only:
@@ -95,22 +95,22 @@ publish_branch_manifest:
     DOCKER_IMAGE_TAG: ${CI_COMMIT_REF_SLUG}
 
 
-# Publish tagged release
-.publish_tag:
+# Push tagged release
+.push_tag:
   extends: .build
-  stage: publish
+  stage: push
   only:
     - tags
   except:
     - branches
 
-publish_tag_amd64:
-  extends: .publish_tag
+push_tag_amd64:
+  extends: .push_tag
   variables:
     DOCKER_IMAGE_TAG: ${CI_COMMIT_TAG}-amd64
 
-publish_tag_arm64v8:
-  extends: .publish_tag
+push_tag_arm64v8:
+  extends: .push_tag
   tags:
     - docker
     - arm64v8
@@ -119,7 +119,7 @@ publish_tag_arm64v8:
 
 
 # Setup manifests
-.publish_manifest:
+.manifest_tag:
   extends: .manifest
   stage: manifest
   only:
@@ -127,14 +127,14 @@ publish_tag_arm64v8:
   except:
     - branches
 
-publish_tag_manifest:
-  extends: .publish_manifest
+push_tag_manifest:
+  extends: .manifest_tag
   variables:
     DOCKER_MANIFEST_TAG: ${CI_COMMIT_TAG}
     DOCKER_IMAGE_TAG: ${CI_COMMIT_TAG}
 
-publish_tag_manifest:
-  extends: .publish_manifest
+push_tag_manifest:
+  extends: .manifest_tag
   variables:
     DOCKER_MANIFEST_TAG: latest
     DOCKER_IMAGE_TAG: ${CI_COMMIT_TAG}
