--- a/docker-build.yml
+++ b/docker-build.yml
@@ -26,7 +26,7 @@ variables:
         --label "org.label-schema.vendor=LANsible"
         --label "org.label-schema.version='${CI_COMMIT_REF_SLUG}'"
         --label "org.label-schema.schema-version='1.0'"
-        --push .;
+        .;
       else
         docker build
         --cache-from ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${CI_COMMIT_SHA}
@@ -40,8 +40,9 @@ variables:
         --label "org.label-schema.vendor=LANsible"
         --label "org.label-schema.version='${CI_COMMIT_REF_SLUG}'"
         --label "org.label-schema.schema-version='1.0'"
-        --push .;
+        .;
       fi
+    - docker push ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
 
 .manifest:
   tags:
