--- a/docker-build.yml
+++ b/docker-build.yml
@@ -5,8 +5,6 @@ variables:
 
 
 .build:
-  tags:
-    - docker
   image: docker:19
   variables:
     # To make it possible to pass args from a downstream include
@@ -45,9 +43,9 @@ variables:
     - docker push ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
 
 .manifest:
+  image: docker:19
   tags:
     - docker
-  image: docker:19
   script:
     - docker manifest create ${DOCKER_IMAGE_NAME}:${DOCKER_MANIFEST_TAG}
         --amend ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}-amd64
@@ -59,6 +57,9 @@ variables:
 build:
   extends: .build
   stage: build
+  tags:
+    - docker
+    - amd64
   variables:
     DOCKER_IMAGE_NAME: ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}
     DOCKER_IMAGE_TAG: ${CI_COMMIT_SHA}
@@ -73,6 +74,9 @@ build:
 
 push_branch_amd64:
   extends: .push_branch
+  tags:
+    - docker
+    - amd64
   variables:
     DOCKER_IMAGE_TAG: ${CI_COMMIT_REF_SLUG}-amd64
 
@@ -107,6 +111,9 @@ manifest_branch:
 
 push_tag_amd64:
   extends: .push_tag
+  tags:
+    - docker
+    - amd64
   variables:
     DOCKER_IMAGE_TAG: ${CI_COMMIT_TAG}-amd64
 
