fix: ensure dirs exists before login
Signed-off-by: wilmaro <w.denouden@intermax.nl>

--- a/docker-login.yml
+++ b/docker-login.yml
@@ -2,6 +2,7 @@
 before_script:
   # Authenticate to project registry and Docker Hub repository
   # Does not use docker login for kaniko compatibilty
+  - mkdir -p /kaniko/.docker ~/.docker
   - |
     echo "{\"auths\":
       {\"$CI_REGISTRY\": {\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}},\
