--- a/docker-login.yml
+++ b/docker-login.yml
@@ -4,7 +4,15 @@ before_script:
   # Does not use docker login for kaniko compatibilty
   - mkdir -p /kaniko/.docker ~/.docker
   - >
-    echo "{\"auths\":
-      {\"$CI_REGISTRY\": {\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}},
-      {\"https://index.docker.io/v1/\": {\"username\":\"$DOCKER_HUB_USER\",\"password\":\"$DOCKER_HUB_PASSWORD\"}}
+    echo "{
+      \"auths\": {
+        \"$CI_REGISTRY\": {
+          \"username\": \"$CI_REGISTRY_USER\",
+          \"password\": \"$CI_REGISTRY_PASSWORD\"
+        },
+        \"https://index.docker.io/v1/\": {
+          \"username\":\"$DOCKER_HUB_USER\",
+          \"password\":\"$DOCKER_HUB_PASSWORD\"
+        }
+      }
     }" | tee /kaniko/.docker/config.json ~/.docker/config.json
